src/assets/styles/main.css
/** @format */

/* General Container*/
.container {
    width: 100dvw;
    height: 100dvh;
    position: relative;

    display: flex;
    flex-direction: column;
}

/* Ui Styles */

.ui-heading {
    font-size: clamp(4.2rem, 10vh, 5.6rem);
    color: white;
    text-align: center;
}

.ui-button {
    color: white;
    font-size: clamp(2.2rem, 6vh, 3.2rem);
    padding-inline: 1.5rem;
    padding-bottom: 0.3rem;

    border: 4px double transparent;
    transition: filter 0.4s ease-in-out;
    cursor: pointer;
    filter: brightness(0.7);
}

.ui-button:not(:disabled):hover,
.ui-button:not(:disabled):focus-within,
.ui-button:not(:disabled):focus-visible {
    filter: brightness(1);
    border-left-color: white;
    border-right-color: white;
}

.ui-button:disabled {
    filter: brightness(0.4);
    cursor: auto;
}

/* Animations */

@keyframes fadeIn {
    0% {
        opacity: 1;
    }
    100% {
        opacity: 0;
    }
}

.fades-in {
    opacity: 1; /* Start hidden */
    animation: fadeIn 2.5s ease-out forwards; /* 3s animation duration */
    animation-delay: 0.25s;
}

/* Overlays */

.overlay-button-container {
    position: absolute;
    right: 0;
    top: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 1.25rem;
    margin: 0.75rem;
    filter: brightness(0.7);
}

.overlay-button-container > span {
    font-size: 2.2rem;
    translate: 0 -1px;
    letter-spacing: 2.5px;
}

.overlay-fade-in {
    opacity: 1;
    position: fixed;
    inset: 0;
    background-color: black;
    z-index: 1000;
    pointer-events: none;
}

/* Main Menu */

.main-menu {
    justify-content: center;
    align-items: center;

    gap: 10vh;
}

.main-menu-buttons {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    cursor: pointer;
}

/* Mobile controller */
.mobile-controller {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3, 1fr);
    position: absolute;
    right: 0;
    bottom: 0;
    margin: 1rem;
    transform-origin: bottom right;
}

.mobile-controller img {
    width: 48px;
    height: 48px;
}

.mobile-controller > .up {
    grid-column: 2;
    grid-row: 1;
}

.mobile-controller > .down {
    grid-column: 2;
    grid-row: 3;
    rotate: 180deg;
}
.mobile-controller > .right {
    grid-column: 3;
    grid-row: 2;
    rotate: 90deg;
}
.mobile-controller > .left {
    grid-column: 1;
    grid-row: 2;
    rotate: -90deg;
}

.landscape-hint {
    width: 100svw;
    border-top: 2px double white;
    border-bottom: 2px double white;
    position: absolute;
    inset-block: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding-block: 128px;
    translate: 0px -128px;
    background: rgba(0, 0, 0, 0.5);
    backdrop-filter: blur(4px);
    pointer-events: none;
}

.landscape-hint img {
    width: 96px;
    height: 96px;
    image-rendering: pixelated;
}

.landscape-hint.hidden {
    opacity: 0;
    transition: opacity 1s ease-out;
}

.reset-to-center {
    font-size: 2rem;
    gap: 1.25rem;
    margin: 0.5rem;
    padding: 0.5rem;
    padding-inline: 2rem;
    align-self: center;
    border-block: 1px solid white;
    background: rgba(0, 0, 0, 0.5);
    opacity: 1;
    pointer-events: all;
    transition: opacity 0.5s ease-in-out;
    filter: brightness(0.7);
    position: relative;
}

.reset-to-center:before {
    content: '';
    position: absolute;
    width: 29.5px;
    aspect-ratio: 1 / 1;
    rotate: 45deg;
    left: -15.75px;
    border-left: 1px solid white;
    border-bottom: 1px solid white;
}
.reset-to-center:after {
    content: '';
    position: absolute;
    width: 29.5px;
    aspect-ratio: 1 / 1;
    rotate: 225deg;
    right: -15.75px;
    border-left: 1px solid white;
    border-bottom: 1px solid white;
}

.reset-to-center.hidden {
    opacity: 0;
    pointer-events: none;
}

